# pet-fastapi-aws

.github/workflows/: test.yml
services/talk_booking/: pyproject.toml
