[tool.poetry]
name = "talk-booking"
version = "0.1.0"
description = ""
authors = ["Anton Butyrin <butyrinhome@gmail.com>"]
readme = "README.md"
packages = [{include = "talk_booking"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.93.0"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
black = "^23.1.0"
isort = "^5.12.0"
bandit = "^1.7.4"
safety = "^2.3.5"
flake8 = "4.0.1"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
